# CPP-Learning

./: .gitignore  .releaserc  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: develop-builds-tests.yml  release-builds-tests.yml  release-tag-changelog-commit.yml
examples/ExamplePinHardware/: CMakeLists.txt
examples/ExamplePinHardware/include/: Port.h  portmacro.h
examples/ExamplePinHardware/include/Pin/: GPIOPort.h  Pin.h
examples/ExamplePinHardware/include/Pin/Behaviors/: HardwareInterface.h
examples/ExamplePinHardware/include/Pin/Behaviors/Action/: ClearAction.h  ReadAction.h  SetAction.h  ToggleAction.h
examples/ExamplePinHardware/include/Pin/Behaviors/Direction/: InputDirection.h  OutputDirection.h
examples/ExamplePinHardware/include/Pin/Digital/: DigitalInputPin.h  DigitalOutputPin.h
examples/ExamplePinHardware/src/: GPIOPort.cpp  main.cpp
examples/ExamplePinHardware/src/Pin/: Pin.cpp
examples/ExamplePinHardware/src/Pin/Behaviors/Action/: ClearAction.cpp  ReadAction.cpp  SetAction.cpp  ToggleAction.cpp
examples/ExamplePinHardware/src/Pin/Behaviors/Direction/: InputDirection.cpp  OutputDirection.cpp
examples/ExamplePinHardware/src/Pin/Digital/: DigitalInputPin.cpp  DigitalOutputPin.cpp
examples/FactoryDesignPattern/: CMakeLists.txt
examples/FactoryDesignPattern/include/: CircleShape.h  RectangleShape.h  ShapeFactory.h  ShapeFactoryInterface.h  ShapeInterface.h
examples/FactoryDesignPattern/src/: CircleShape.cpp  RectangleShape.cpp  ShapeFactory.cpp  main.cpp
examples/StateDesignPattern/: CMakeLists.txt
examples/StateDesignPattern/docs/: StateMachine.drawio
examples/StateDesignPattern/include/: GumballMachine.h  HasQuarterState.h  NoQuarterState.h  SoldOutState.h  SoldState.h  StateInterface.h
examples/StateDesignPattern/src/: GumballMachine.cpp  HasQuarterState.cpp  NoQuarterState.cpp  SoldOutState.cpp  SoldState.cpp  main.cpp
examples/StrategyDesignPattern/: CMakeLists.txt
examples/StrategyDesignPattern/include/Behaviors/Fly/: FlyBehaviorInterface.h  FlyNoWay.h  FlyWithRockets.h  FlyWithWings.h
examples/StrategyDesignPattern/include/Behaviors/Quack/: MuteQuack.h  Quack.h  QuackBehaviorInterface.h  Squeak.h
examples/StrategyDesignPattern/include/Ducks/: Duck.h  MallardDuck.h  RubberDuck.h
examples/StrategyDesignPattern/src/: main.cpp
examples/StrategyDesignPattern/src/Behaviors/Fly/: FlyNoWay.cpp  FlyWIthWIngs.cpp  FlyWithRockets.cpp
examples/StrategyDesignPattern/src/Behaviors/Quack/: MuteQuack.cpp  Quack.cpp  Squeak.cpp
examples/StrategyDesignPattern/src/Ducks/: Duck.cpp  MallardDuck.cpp  RubberDuck.cpp
src/: main.c
tests/: CMakeLists.txt  Test.cpp
